[gd_scene load_steps=7 format=2]

[ext_resource path="res://menu/Mainmenu.gd" type="Script" id=1]
[ext_resource path="res://objects/system/label/CustomLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/system/label/MenuLabels.tscn" type="PackedScene" id=3]
[ext_resource path="res://menu/ServerListItem.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "wobble_local"
length = 3.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("LocalHolder:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 2.4, 2.4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LocalHolder:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -2.0, 2.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "wobble_online"
length = 3.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("OnlineHolder:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 2.4, 2.4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OnlineHolder:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -2.0, 2.0 ]
}

[node name="Mainmenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuLabels" parent="." instance=ExtResource( 3 )]

[node name="GameTypeHolder" type="Node2D" parent="."]
position = Vector2( 340, 192 )

[node name="LocalHolder" type="Node2D" parent="GameTypeHolder"]
rotation = -0.0349066
scale = Vector2( 2.2963, 2.2963 )

[node name="LocalLabel" parent="GameTypeHolder/LocalHolder" instance=ExtResource( 2 )]
position = Vector2( 0, -5 )
text = "Local"
fontSize = 2
alignment = 1
outline = true
animate = false

[node name="OnlineHolder" type="Node2D" parent="GameTypeHolder"]
position = Vector2( 0, 64 )

[node name="OnlineLabel" parent="GameTypeHolder/OnlineHolder" instance=ExtResource( 2 )]
position = Vector2( 0, -5 )
text = "Online"
fontSize = 2
alignment = 1
outline = true
animate = false

[node name="Anim" type="AnimationPlayer" parent="GameTypeHolder"]
autoplay = "wobble_local"
anims/wobble_local = SubResource( 1 )
anims/wobble_online = SubResource( 2 )

[node name="OnlineDialog" type="PopupDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -28.0
margin_right = 64.0
margin_bottom = 20.0
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="VBoxContainer" parent="OnlineDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.5
margin_top = -20.0
margin_right = 56.5
margin_bottom = 20.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostButton" type="Button" parent="OnlineDialog/Content"]
margin_top = 7.0
margin_right = 113.0
margin_bottom = 18.0
focus_neighbour_left = NodePath("../JoinButton")
focus_neighbour_top = NodePath("../JoinButton")
focus_neighbour_right = NodePath("../JoinButton")
focus_neighbour_bottom = NodePath("../JoinButton")
focus_next = NodePath("../JoinButton")
focus_previous = NodePath("../JoinButton")
text = "host"

[node name="JoinButton" type="Button" parent="OnlineDialog/Content"]
margin_top = 22.0
margin_right = 113.0
margin_bottom = 33.0
focus_neighbour_left = NodePath("../HostButton")
focus_neighbour_top = NodePath("../HostButton")
focus_neighbour_right = NodePath("../HostButton")
focus_neighbour_bottom = NodePath("../HostButton")
focus_next = NodePath("../HostButton")
focus_previous = NodePath("../HostButton")
text = "join"

[node name="HostDialog" type="PopupDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -26.0
margin_right = 64.0
margin_bottom = 26.0
rect_clip_content = true
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="VBoxContainer" parent="HostDialog"]
anchor_right = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostLabel" type="Label" parent="HostDialog/Content"]
margin_right = 96.0
margin_bottom = 5.0
text = "name the server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServernameEdit" type="LineEdit" parent="HostDialog/Content"]
margin_top = 9.0
margin_right = 96.0
margin_bottom = 24.0
max_length = 20
placeholder_text = "server name"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinDialog" type="PopupDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -96.0
margin_right = 128.0
margin_bottom = 160.0
rect_min_size = Vector2( 256, 128 )
rect_clip_content = true
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="VBoxContainer" parent="JoinDialog"]
anchor_right = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ListJoinLabel" type="Label" parent="JoinDialog/Content"]
margin_right = 224.0
margin_bottom = 5.0
text = "choose a server from the list"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerList" type="VBoxContainer" parent="JoinDialog/Content"]
margin_top = 9.0
margin_right = 224.0
margin_bottom = 20.0

[node name="ServerListItem" parent="JoinDialog/Content/ServerList" instance=ExtResource( 4 )]
margin_right = 224.0

[node name="RefreshButton" type="Button" parent="JoinDialog/Content"]
margin_top = 24.0
margin_right = 224.0
margin_bottom = 35.0
text = "refresh"

[node name="HSeparator" type="HSeparator" parent="JoinDialog/Content"]
margin_top = 39.0
margin_right = 224.0
margin_bottom = 43.0

[node name="DirectJoinLabel" type="Label" parent="JoinDialog/Content"]
margin_top = 47.0
margin_right = 224.0
margin_bottom = 52.0
text = "or join directly"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IpEdit" type="LineEdit" parent="JoinDialog/Content"]
margin_top = 56.0
margin_right = 224.0
margin_bottom = 71.0
placeholder_text = "ip address"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="OnlineDialog/Content/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="OnlineDialog/Content/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="text_entered" from="HostDialog/Content/ServernameEdit" to="." method="_on_ServernameEdit_text_entered"]
[connection signal="pressed" from="JoinDialog/Content/RefreshButton" to="." method="_on_RefreshButton_pressed"]
[connection signal="text_entered" from="JoinDialog/Content/IpEdit" to="." method="_on_IpEdit_text_entered"]
